<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/konverter2"
    tools:context=".ReamurToCelcius" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reamurkecelcius"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="42dp"
        android:textColor="#ffffff"
        android:text="@string/masukkannilaireamur" />

    <EditText
        android:id="@+id/edNilaiReamurRTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/masukkannilaireamur"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btKonvertRTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiReamurRTC"
        android:layout_alignRight="@+id/edNilaiReamurRTC"
        android:layout_below="@+id/edNilaiReamurRTC"
        android:layout_marginTop="26dp"
        android:textColor="#ffffff"
        android:text="@string/convert" />

    <EditText
        android:id="@+id/edNilaiCelciusRTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btKonvertRTC"
        android:layout_alignRight="@+id/btKonvertRTC"
        android:layout_below="@+id/btKonvertRTC"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:hint="@string/nilaicelcius"
        android:inputType="number" />

    <Button
        android:id="@+id/btMenuUtamaRTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiCelciusRTC"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edNilaiCelciusRTC"
        android:layout_marginBottom="23dp"
        android:textColor="#ffffff"
        android:text="@string/menuutama" />

</RelativeLayout>
