<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/konverter2"
    tools:context=".FarenheitToReamur" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/farenheitkereamur"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="59dp"
        android:textColor="#ffffff"
        android:text="@string/masukkannilaifarenheit" />

    <EditText
        android:id="@+id/edNilaiFarenheitFTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/masukkannilaifarenheit"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btKonvertFTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiFarenheitFTR"
        android:layout_alignRight="@+id/edNilaiFarenheitFTR"
        android:layout_below="@+id/edNilaiFarenheitFTR"
        android:layout_marginTop="24dp"
        android:textColor="#ffffff"
        android:text="@string/convert" />

    <EditText
        android:id="@+id/edNIlaiReamurFTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btKonvertFTR"
        android:layout_alignRight="@+id/btKonvertFTR"
        android:layout_below="@+id/btKonvertFTR"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:hint="@string/nilaireamur"
        android:inputType="number" />

    <Button
        android:id="@+id/btMenuUtamaFTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNIlaiReamurFTR"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffff"
        android:layout_alignRight="@+id/edNIlaiReamurFTR"
        android:layout_marginBottom="24dp"
        android:text="@string/menuutama" />

</RelativeLayout>
