<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/konverter2"
    tools:context=".CelciusToReamur" >

    <EditText
        android:id="@+id/edNilaiCelciusCTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/masukkannilaicelcius2"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiCelciusCTR"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:text="@string/masukkannilaicelcius2" />

    <Button
        android:id="@+id/btMenuUtamaCTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiReamurCTR"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edNilaiReamurCTR"
        android:layout_marginBottom="26dp"
        android:textColor="#ffffff"
        android:text="@string/menuutama" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/celciuskereamur"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edNilaiReamurCTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btMenuUtamaCTR"
        android:layout_alignLeft="@+id/btKonvertCTR"
        android:layout_alignRight="@+id/btKonvertCTR"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/nilaireamur"
        android:textColor="#ffffff"
        android:inputType="number" />

    <Button
        android:id="@+id/btKonvertCTR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiCelciusCTR"
        android:layout_alignRight="@+id/edNilaiCelciusCTR"
        android:layout_below="@+id/edNilaiCelciusCTR"
        android:layout_marginTop="25dp"
        android:textColor="#ffffff"
        android:text="@string/convert" />

</RelativeLayout>