<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/konverter2"
    tools:context=".CelciusToFarenheit" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edNilaiFarenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btKonvertCelciustoFarenheit"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btKonvertCelciustoFarenheit"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:textColor="#ffffff"
        android:hint="@string/hasilconvert" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/celciuskefarenheit"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="59dp"
        android:textColor="#ffffff"
        android:text="@string/masukkannilaicelcius2" />

    <EditText
        android:id="@+id/edNilaiCelcius2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/btMenuUtama"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/masukkannilaicelcius2"
        android:textColor="#ffffff"
        android:inputType="" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btKonvertCelciustoFarenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edNilaiCelcius2"
        android:layout_marginTop="25dp"
        android:textColor="#ffffff"
        android:text="@string/convert" />

    <Button
        android:id="@+id/btMenuUtama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edNilaiFarenheit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edNilaiFarenheit"
        android:layout_marginBottom="46dp"
        android:textColor="#ffffff"
        android:text="@string/menuutama" />

</RelativeLayout>